--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ plugins {
 group 'com.nikhilm'
 sourceCompatibility = 1.11
 def grpcVersion = '1.53.0'
-def baseVersion = '3.9.4'
-def baseGroupId = 'io.github.adempiere'
+def baseVersion = 'shw-aereo-1.0.3'
+def baseGroupId = 'com.erpya'
 def customBaseVersion = ""
 def javaMainClass = "org.spin.server.AllInOneServices"
 repositories {
