--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 group 'com.nikhilm'
 sourceCompatibility = 1.11
 def grpcVersion = '1.53.0'
-def baseVersion = 'shw-aereo-1.0.3'
+def baseVersion = 'shw-air-terminal-vertical-1.0.0'
 def baseGroupId = 'com.erpya'
 def customBaseVersion = ""
 def javaMainClass = "org.spin.server.AllInOneServices"
