remove dashboard improvements

--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ dependencies {
 
 	// ADempiere Projects with additional features
 	// Dashboard Improvements
-	implementation "${baseGroupId}:adempiere-dashboard-improvements:1.0.7"
+	//implementation "${baseGroupId}:adempiere-dashboard-improvements:1.0.7"
 	// Point Of Sales Improvements
 	implementation "${baseGroupId}:adempiere-pos-improvements:1.0.0"
 	// Business Processors (To Task's and Schedulers)
